# SanctumCore

./: .clang-format  .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
include/sanctum/core/: Person.h
include/sanctum/utils/: Logger.h
python/: CMakeLists.txt  bindings.cpp
python/Python-Package/: Readme.md  pyproject.toml
python/Python-Package/src/SanctumPyCore/: __init__.py
python/Python-Package/src/SanctumPyCore.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/Python-Package/src/SanctumPyCore/src/: main.py
src/: CMakeLists.txt
src/core/: Person.cpp
src/utils/: Logger.cpp
tests/: CMakeLists.txt  simple_test_runner.cpp
tests/unit/: test_calculator.cpp  test_stringutils.cpp
