[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SanctumPyCore"
version = "0.1.0"
description = "Your C++ Python bindings package"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]

[tool.setuptools]
packages = {find = {where = ["src"]}}
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.pyd", "*.dll"]